Remove async from @Transactional