@@ -31,41 +31,30 @@ public class OutboxProcessor {
     private static final int BATCH_SIZE = 10;
 
     @Transactional
-    public CompletableFuture<Void> processPendingMessages() {
+    public void processPendingMessages() {
         List<OutboxMessage> messages = outboxRepository.findPendingMessagesForUpdate(BATCH_SIZE);
-        
         if (messages.isEmpty()) {
-            return CompletableFuture.completedFuture(null);
+            return;
         }
-        
-        List<CompletableFuture<Void>> futures = messages.stream()
-            .limit(BATCH_SIZE)
-            .map(this::processMessage)
-            .toList();
-        return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]));
+
+        messages.stream().limit(BATCH_SIZE).forEach(this::processMessage);
     }
 
-    private CompletableFuture<Void> processMessage(OutboxMessage message) {
-        return sendToNotificationsService(message)
-            .thenCompose(v -> updateMessageStatus(message.getId(), OutboxMessage.Status.SENT.getValue(), null))
-            .thenRun(() -> log.info("Successfully processed outbox message: {}", message.getId()))
-            .exceptionally(error -> {
-                handleProcessingError(message, error);
-                return null;
-            });
+    @Transactional
+    public void processMessage(OutboxMessage message) {
+        try {
+            sendToNotificationsService(message);
+            updateMessageStatus(message.getId(), OutboxMessage.Status.SENT.getValue(), null);
+        } catch (Exception e) {
+            handleProcessingError(message, e);
+        }
     }
 
     @CircuitBreaker(name = "notificationsService", fallbackMethod = "sendNotificationFallback")
-    private CompletableFuture<Void> sendToNotificationsService(OutboxMessage message) {
+    private void sendToNotificationsService(OutboxMessage message) {
         String notificationsUrl = getNotificationsServiceUrl();
         NotificationRequest request = new NotificationRequest(message.getLogin(), message.getMessage());
-        return notificationsClient.sendNotification(notificationsUrl, request);
-    }
-
-    private CompletableFuture<Void> sendNotificationFallback(OutboxMessage message, Throwable t) {
-        log.warn("Circuit breaker opened for notifications service, message {} will be retried later: {}",
-                message.getId(), t.getMessage());
-        return CompletableFuture.completedFuture(null);
+        notificationsClient.sendNotification(notificationsUrl, request);
     }
 
     private String getNotificationsServiceUrl() {
@@ -73,40 +62,38 @@ public class OutboxProcessor {
         if (instances.isEmpty()) {
             throw new IllegalStateException("No instances of notifications-service found in Consul");
         }
-        ServiceInstance instance = instances.get(0);
+        ServiceInstance instance = instances.getFirst();
         return instance.getUri().toString();
     }
 
-    private CompletableFuture<Void> updateMessageStatus(UUID id, String status, String errorMessage) {
-        return CompletableFuture.supplyAsync(() -> {
-            try {
-                OutboxMessage existing = outboxRepository.findById(id)
-                    .orElseThrow(() -> new IllegalStateException("Message not found: " + id));
-                
-                existing.setStatus(status);
-                existing.setErrorMessage(errorMessage);
-                existing.setUpdatedAt(LocalDateTime.now());
-                if (OutboxMessage.Status.FAILED.getValue().equals(status)) {
-                    existing.setRetryCount(existing.getRetryCount() + 1);
-                }
-                outboxRepository.save(existing);
-                return null;
-            } catch (OptimisticLockingFailureException e) {
-                log.warn("Optimistic lock failed for message {}, skipping (already processed by another instance)", id);
-                return null;
+    @Transactional
+    public void updateMessageStatus(UUID id, String status, String errorMessage) {
+        try {
+            OutboxMessage existing = outboxRepository.findById(id)
+                .orElseThrow(() -> new IllegalStateException("Message not found: " + id));
+
+            existing.setStatus(status);
+            existing.setErrorMessage(errorMessage);
+            existing.setUpdatedAt(LocalDateTime.now());
+            if (OutboxMessage.Status.FAILED.getValue().equals(status)) {
+                existing.setRetryCount(existing.getRetryCount() + 1);
             }
-        });
+            outboxRepository.save(existing);
+        } catch (OptimisticLockingFailureException e) {
+            log.warn("Optimistic lock failed for message {}, skipping (already processed by another instance)", id);
+        }
     }
 
-    private CompletableFuture<Void> handleProcessingError(OutboxMessage message, Throwable error) {
+    @Transactional
+    public void handleProcessingError(OutboxMessage message, Throwable error) {
         log.error("Failed to process outbox message {}: {}", message.getId(), error.getMessage());
 
         if (message.getRetryCount() >= MAX_RETRY_COUNT) {
             log.warn("Max retry count reached for message {}, marking as FAILED", message.getId());
-            return updateMessageStatus(message.getId(), OutboxMessage.Status.FAILED.getValue(), error.getMessage());
+            updateMessageStatus(message.getId(), OutboxMessage.Status.FAILED.getValue(), error.getMessage());
         } else {
             log.info("Retrying message {} (attempt {} of {})", message.getId(), message.getRetryCount() + 1, MAX_RETRY_COUNT);
-            return updateMessageStatus(message.getId(), OutboxMessage.Status.PENDING.getValue(), error.getMessage());
+            updateMessageStatus(message.getId(), OutboxMessage.Status.PENDING.getValue(), error.getMessage());
         }
     }
 }
